// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageListComponent should render 1`] = `
<div
  className="message-list-wrapper"
>
  <ul
    id="message-list"
  />
</div>
`;

exports[`MessageListComponent should render any messages passed to it using the \`messages\` prop 1`] = `
<div
  className="message-list-wrapper"
>
  <ul
    id="message-list"
  >
    <li
      className="message"
      key="0"
    >
      Hello
    </li>
    <li
      className="message"
      key="1"
    >
      Testing
    </li>
  </ul>
</div>
`;
